# llm-safety-eval

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint-test.yml
configs/: base.yaml  matrix.yaml  matrix_ollama.yaml  models.yaml  providers.yaml
configs/schema/: base.schema.json  matrix.schema.json  models.schema.json  prompts.schema.json  providers.schema.json
docs/: EXECUTION_GUARDRAILS.md  LABELING.md  MODEL_BACKENDS.md  PRIOR_WORK.md  PROTOCOL.md  REPORTING.md  REPRODUCIBILITY.md  TESTING.md  THREAT_MODEL.md  report_generation_prompt.md  research_paper_template.md
labeling/: rubric.md
notebooks/: 00_quickstart_sandbox.ipynb  01_prompt_suite_design.ipynb  02_run_and_inspect.ipynb  03_compare_models.ipynb  04_generate_report_materials.ipynb
reports/: report_config.yaml
reports/sections/: abstract.tex  appendix.tex  conclusion.tex  discussion.tex  experiments.tex  future_work.tex  intro.tex  limitations.tex  methods.tex  related.tex  results.tex
reports/templates/: research_report.tex.jinja
scripts/: check_endpoint.py  consolidate_results.py  dry_run_matrix.py  generate_fixture_run.py  generate_report.py  launch_notebook.sh  lint_prompt_suite.py  run_mock_experiment.sh  validate_configs.py
src/llm_safety_eval/: __init__.py  cli.py  (+4 more)
tests/: .gitkeep  test_clients.py  test_config_validation.py  test_heuristics.py  test_matrix.py  test_prompt_generator.py  test_prompt_lint.py  test_prompts.py  test_rate_limit.py  test_runner.py  test_safety_metrics.py  test_summary.py  test_transforms.py  test_unsafe_detector.py
(+50 files in other folders)
